--- a/worklyfe_app/pubspec.yaml
+++ b/worklyfe_app/pubspec.yaml
@@ -33,7 +33,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/
 
 
   # fonts:
